--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
